--- a/_config.yml
+++ b/_config.yml
@@ -145,11 +145,11 @@ related_blog_posts:
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
 giscus:
-  repo: # <your-github-user-name>/<your-github-repo-name>
-  repo_id: # leave empty or specify your repo_id (see https://giscus.app/)
-  category: Comments # name of the category under which discussions will be created
-  category_id: # leave empty or specify your category_id (see https://giscus.app/)
-  mapping: title # identify discussions by post title
+  repo: room1805/room1805.github.io # <your-github-user-name>/<your-github-repo-name>
+  repo_id: R_kgDOMAyPlA # leave empty or specify your repo_id (see https://giscus.app/)
+  category: Announcements # name of the category under which discussions will be created
+  category_id: DIC_kwDOMAyPlM4Ci2OP # leave empty or specify your category_id (see https://giscus.app/)
+  mapping: pathname # identify discussions by post title
   strict: 1 # use strict identification mode
   reactions_enabled: 1 # enable (1) or disable (0) emoji reactions
   input_position: bottom # whether to display input form below (bottom) or above (top) the comments
@@ -181,6 +181,10 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  happy:
+    output: true
+    permalink: /happy/:path/
+
 
 announcements:
   enabled: false
